--- a/WpfMoneyTransfer/Views/MainWindow.xaml
+++ b/WpfMoneyTransfer/Views/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfMoneyTransfer.Views"
         mc:Ignorable="d"
-        Title="Перевод денежных средств" Height="250" Width="500">
+        Title="Money transfer" Height="250" Width="500">
     <Window.Resources>
 
         <Style x:Key="menuItem" TargetType="MenuItem">
@@ -33,29 +33,29 @@
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
         <Menu Background="{x:Null}">
-            <MenuItem Header="Меню" Foreground="White" Style="{StaticResource menuItem}">
-                <MenuItem Command="{Binding LoadDb}" Background="Black" Header="Загрузить БД"></MenuItem>
-                <MenuItem Command="{Binding OpenPayments}" Background="Black" Header="Платежи"></MenuItem>
-                <MenuItem Command="{Binding ExitCommand}" Background="Black" Header="Выход"></MenuItem>
+            <MenuItem Header="Menu" Foreground="White" Style="{StaticResource menuItem}">
+                <MenuItem Command="{Binding LoadDb}" Background="Black" Header="Load data base"></MenuItem>
+                <MenuItem Command="{Binding OpenPayments}" Background="Black" Header="Payments"></MenuItem>
+                <MenuItem Command="{Binding ExitCommand}" Background="Black" Header="Exit"></MenuItem>
             </MenuItem>
         </Menu>
         <ListView Name="listClientsAndCards" Grid.Row="1" Width="460" Height="150" HorizontalAlignment="Left" VerticalAlignment="Top" 
                   Margin="20,10,0,0" Background="{x:Null}" Foreground="White">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=Surname}" Width="70">Фамилия</GridViewColumn>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=Name}" Width="60">Имя</GridViewColumn>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=MiddleName}" Width="70">Отчетсво</GridViewColumn>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=DateOfBirth}" Width="90">Дата рождения</GridViewColumn>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=NumberOfPhone}" Width="110">Номер телефона</GridViewColumn>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=Surname}" Width="70">Surname</GridViewColumn>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=Name}" Width="60">Name</GridViewColumn>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=MiddleName}" Width="70">Middle name</GridViewColumn>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=DateOfBirth}" Width="90">Date of birth</GridViewColumn>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=NumberOfPhone}" Width="110">Phone number</GridViewColumn>
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button Command="{Binding AddClient}" Content="Добавить" Grid.Row="1" Margin="30,180,0,0">
+        <Button Command="{Binding AddClient}" Content="Add" Grid.Row="1" Margin="30,180,0,0">
         </Button>
-        <Button Command="{Binding EditClient}" Content="Редактировать" Grid.Row="1" Margin="180,180,0,0">
+        <Button Command="{Binding EditClient}" Content="Edit" Grid.Row="1" Margin="180,180,0,0">
         </Button>
-        <Button Command="{Binding RemoveClient}" Content="Удалить" Grid.Row="1" Margin="330,180,0,0">
+        <Button Command="{Binding RemoveClient}" Content="Delete" Grid.Row="1" Margin="330,180,0,0">
         </Button>
 
         <Grid.Background>
